# grounded_sam2_ros

./: Dockerfile_ros
grounding_dino/groundingdino/models/GroundingDINO/: ms_deform_attn.py
grounding_dino/groundingdino/util/: inference.py
ros_wrapper/: CMakeLists.txt  package.xml
ros_wrapper/src/: grounded_sam_2_ros.py
